--- a/css/_mixins.sass
+++ b/css/_mixins.sass
@@ -54,12 +54,11 @@
     &:focus,
     &:active,
         animation-name: back-pulse
-        animation-duration: 1s
+        animation-duration: 1.5s
         animation-timing-function: linear
         animation-iteration-count: infinite
-        background-color: $background-color
         
 @keyframes back-pulse
   50%
-    background-color: $hover-color
+    background-color: inherit
 // Shoutout to Hover.css :)
