--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -1,15 +1,15 @@
 // Color Variables
 $primary-color: #ff383B
-$secondary-color: #6b0806
+$secondary-color: #B50C0F
 $text-color: #140101
-$accent-color: #B50C0F
 $background-color: #f8f8f8
 $hover-color: #ff9999
 
 // Night Mode Variables
-$night-mode-primary: #0095ff
-$night-mode-secondary: #0C52E8
-$night-mode-background: #787878
+$nightmode-primary: #0095ff
+$nightmode-secondary: #0C52E8
+$nightmode-background: #15202B
+$nightmode-text: #ffffff
 
 // Font
 $font: "San Francisco", sans-serif
