--- a/css/main.sass
+++ b/css/main.sass
@@ -114,8 +114,8 @@ h2
                 padding-bottom: 1rem
 
             h1
-                line-height: 2rem
-                font-weight: 500
+                line-height: 2.5rem
+                font-weight: 700
 
             a
                 font-weight: 700
@@ -125,7 +125,7 @@ h2
                 +hover-back-pulse
 
         .wrapper
-            width: 26rem
+            width: 27rem
 
         // Links to online profiles
         nav
@@ -211,6 +211,8 @@ h2
 .left-night
     background-color: $nightmode-primary
     
+    .infobox > div > h1
+        color: $nightmode-text
     a
         color: $nightmode-text
     
