--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -1,6 +1,6 @@
 // Color Variables
 $primary-color: #ff383B
-$secondary-color: #B50C0F
+$secondary-color: #CC2D30
 $text-color: #140101
 $background-color: #f8f8f8
 $hover-color: #ff9999
