--- a/css/_mixins.sass
+++ b/css/_mixins.sass
@@ -20,6 +20,11 @@
     margin: 0
     padding: 0
 
+// Size mixin
+=size($height, $width)
+    height: $height
+    width: $width
+
 // Full width and height mixin
 =fullsize
     height: 100%
@@ -40,7 +45,7 @@
     &:hover,
     &:focus,
     &:active,
-        transform: scale(1.2)
+        transform: scale(1.15)
 
 // Hover.css - Back pulse effect
 =hover-back-pulse-light
@@ -63,19 +68,11 @@
     background-color: lighten($secondary-color, 25%)
 
 =hover-back-pulse-night
-    display: inline-block
-    vertical-align: middle
-    transform: perspective(1px) translateZ(0)
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0)
-    transition-duration: 2s
-    transition-property: background-color
+    +hover-back-pulse-light
     &:hover,
     &:focus,
     &:active,
         animation-name: back-pulse-night
-        animation-duration: 2s
-        animation-timing-function: linear
-        animation-iteration-count: infinite
 
 @keyframes back-pulse-night
   50%
