--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -1,6 +1,14 @@
+// Font Weight
+$light: 300
+$normal: 500
+$bold: 700
+// Font Size
+$small: 1rem
+$medium: 2rem
+$large: 3rem
 // Color Variables
 $primary-color: #ff383B
-$secondary-color: #CC2D30
+$secondary-color: #B50C0F
 $text-color: #140101
 $background-color: #f8f8f8
 $hover-color: #ff9999
