--- a/css/main.sass
+++ b/css/main.sass
@@ -183,7 +183,7 @@ h2
             padding: 0 2rem .5rem 2rem
             font-size: 1rem
 
-            .misc-left:hover
+            .misc-left
                 +hover-grow
 
 // Night mode CSS classes
@@ -243,7 +243,6 @@ h2
 
     .misc > a:hover > span
             color: $nightmode-primary
-
 
 // Mobile breakpoint style
 @media only screen and (max-width: 768px)
