--- a/css/main.css
+++ b/css/main.css
@@ -81,10 +81,12 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .container .left .button-container {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   width: 2rem;
   margin: .5rem 0 0 .5rem;
   -webkit-transform: rotate(180deg);
@@ -356,6 +358,10 @@ h2 {
   background-color: #f8f8f8;
 }
 
+.right-light section {
+  background-color: #f8f8f8;
+}
+
 .right-light section > h2,
 .right-light .fa-check-circle {
   color: #B50C0F;
@@ -414,6 +420,7 @@ h2 {
 
 .right-night section {
   color: #ffffff;
+  background-color: #15202B;
 }
 
 .right-night section > h2,
